<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNewTruckActivity" tools:layout_editor_absoluteY="-12dp" tools:layout_editor_absoluteX="0dp">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/VINTextField"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/vin"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/makeTextField"
            app:layout_constraintTop_toBottomOf="@+id/lastTechnicalStateCheckDateField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/lastTechnicalStateCheckDateField"
            android:hint="@string/make"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/modelTextField"
            app:layout_constraintTop_toBottomOf="@+id/makeTextField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/makeTextField"
            android:hint="@string/model"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weightTextField"
            app:layout_constraintTop_toBottomOf="@+id/modelTextField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/modelTextField"
            android:hint="@string/weight_tonnes"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/maxCapacityTextField"
            app:layout_constraintTop_toBottomOf="@+id/weightTextField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/weightTextField"
            android:hint="@string/max_capacity_tonnes"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tankSizeTextField"
            app:layout_constraintTop_toBottomOf="@+id/maxCapacityTextField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/maxCapacityTextField"
            android:hint="@string/tank_size_l"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/avgFuelConsumptionTextField"
            app:layout_constraintTop_toBottomOf="@+id/tankSizeTextField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/tankSizeTextField"
            android:hint="@string/avg_fuel_consumption_l"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/plate_number"
            android:ems="10"
            android:id="@+id/plateField"
            app:layout_constraintTop_toBottomOf="@+id/VINTextField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/VINTextField"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/manufacturedDateField"
            app:layout_constraintTop_toBottomOf="@+id/plateField"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/plateField"
            android:hint="@string/manufactured_date"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/lastTechnicalStateCheckDateField"
            app:layout_constraintTop_toBottomOf="@+id/manufacturedDateField"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/manufacturedDateField"
            android:hint="@string/last_technical_check_date"/>
    <Button
            android:text="@string/add_new_truck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/avgFuelConsumptionTextField"
            android:layout_marginTop="17dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.164"
            android:onClick="addNewTruck"
    />
</androidx.constraintlayout.widget.ConstraintLayout>