<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" tools:layout_editor_absoluteY="-61dp" tools:layout_editor_absoluteX="0dp">
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:onClick="verifyUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.707"
            app:layout_constraintStart_toStartOf="@+id/passwordTextField"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
            app:layout_constraintHorizontal_bias="0.455"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordTextField"
            android:hint="@string/password"
            android:layout_marginBottom="388dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toEndOf="@+id/loginTextField"
            app:layout_constraintStart_toStartOf="@+id/loginTextField" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginTextField"
            android:hint="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextField" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.719" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
    />
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>